--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Dependencies
-        run: sudo apt-get update && sudo apt-get install -y g++ make
+        run: sudo apt-get update && sudo apt-get install -y g++
 
-      - name: Build Project
-        run: make
+      - name: Compile main.cpp
+        run: g++ -o myapp main.cpp
 
-      - name: Run Tests
-        run: make check  # or ./test if you have a test binary
+      - name: Run Program
+        run: ./myapp
